--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,7 +14,11 @@
         <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" />
     </head>
     <body>
+        
         <!-- Navigation-->
+        {%for category in categories%}
+        <li><a class="dropdown-item" href="#!">{{category}}</a></li>
+    {%endfor%}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="#!">Start Bootstrap</a>
@@ -26,13 +30,14 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">All Products</a></li>
+                                <li><a class="dropdown-item" href="http://127.0.0.1:5000/products">All Products</a></li>
                                 <li><hr class="dropdown-divider" /></li>
                                 <li><a class="dropdown-item" href="#!">Popular Items</a></li>
                                 <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
                             </ul>
                         </li>
                     </ul>
+                
                     <form class="d-flex">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
